--- a/mystyle.css
+++ b/mystyle.css
@@ -45,24 +45,19 @@ img {
     margin-right: auto;
 }
 .video-container {
-/* 	position:relative;
+ 	position:relative;
 	padding-bottom:56.25%;
 	padding-top:30px;
 	height:0;
-	overflow:hidden; */
+	overflow:hidden; 
 }
 
 .video-container iframe, .video-container object, .video-container embed {
 	position:absolute;
-/* 	top:0;
+	top:0;
 	left:0;
 	width:100%;
-	height:100%; */
-	position:relative;
-	padding-bottom:56.25%;
-	padding-top:30px;
-	height:0;
-	overflow:hidden;
+	height:100%;
 }
 #sidebar{
 	position: fixed;
