Updated website font to Roboto

--- a/mystyle.css
+++ b/mystyle.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,500');
+
 @-ms-viewport{
   width: device-width;
 }
@@ -28,7 +30,7 @@ a:active {
     color:#2b3d50;
 }
 body {
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Roboto:400', sans-serif;
 	font-size:10pt;
 	margin:2%;
 	margin-top:5%;
@@ -39,6 +41,9 @@ p{
 	color:#000;
 	max-width:85%;
 	width: 75%;
+}
+b{
+	font-family: 'Roboto:500', sans-serif;
 }
 img {
 	max-width:75%;
