less extreme dashed line values

--- a/mystyle.css
+++ b/mystyle.css
@@ -45,8 +45,8 @@ p{
 hr{
     border-width: .5px;
     border-style: dashed;
-    width: 500%;
-    margin-left: -500px;
+    width: 135%;
+    margin-left: -15%;
 }
 img {
 	width: 280px;
